<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.stzeyetrial.auretim</groupId>
    <artifactId>AuReTim</artifactId>
    <version>1.3-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>SpeechDecoderTest</name>

    <repositories>
        <repository>
            <id>java.net</id>
            <url>https://maven.java.net/content/repositories/public/</url>
        </repository>
        <repository>
            <id>JBoss repository</id>
            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>sonatype-oss-public</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>de.stzeyetrial.auretim.AuReTim</mainClass>
    </properties>

    <organization>
        <!-- Used as the 'Vendor' for JNLP generation -->
        <name>STZ eyetrial</name>
    </organization>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <archive>
                        <manifest>
                            <!-- specify the main class for your application -->
                            <mainClass>${mainClass}</mainClass>
                            <addClasspath>true</addClasspath>
                            <addExtensions />
                            <classpathPrefix>lib</classpathPrefix>
                        </manifest>
                        <manifestEntries>
                            <JavaFX-Preloader-Class>de.stzeyetrial.auretim.Preloader</JavaFX-Preloader-Class>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <configuration>
                    <includeScope>runtime</includeScope>
                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                </configuration>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>

                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <additionalClasspathElements>

                    </additionalClasspathElements>
                </configuration>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-release-plugin</artifactId>
              <version>2.5.1</version>
              <configuration>
                <preparationGoals>clean verify install</preparationGoals>
                <tagBase>https://auge-117-036.eye.medizin.uni-tuebingen.de/subversion/auretim/tags</tagBase>
                <remoteTagging>true</remoteTagging>
                <goals>install deploy</goals>
                <!--site:site site:deploy-->
              </configuration>
            </plugin>
		    <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.4</version>
                <configuration>
                    <mainClass>de.stzeyetrial.auretim.AuReTim</mainClass>
                    <options>
                        <option>--add-exports</option>
                        <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                     </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <ciManagement>
      <system>hudson</system>
      <url>https://auge-117-028.eye.medizin.uni-tuebingen.de:8080/hudson/job/auretim/</url>
    </ciManagement>
    <distributionManagement>
      <repository>
        <id>artifactory-releases</id>
        <url>http://auge-117-028.eye.medizin.uni-tuebingen.de:8080/artifactory/auretim-releases</url>
      </repository>
      <snapshotRepository>
        <id>artifactory-snapshots</id>
        <url>http://auge-117-028.eye.medizin.uni-tuebingen.de:8080/artifactory/auretim-snapshots</url>
      </snapshotRepository>
      <site>
        <id>dev.biomed-engineering.de</id>
        <url>file:///var/www/project_reports/auretim</url>
      </site>
    </distributionManagement>
    <scm>
      <connection>scm:svn:https://auge-117-036.eye.medizin.uni-tuebingen.de/subversion/auretim/trunk</connection>
      <developerConnection>scm:svn:https://auge-117-036.eye.medizin.uni-tuebingen.de/subversion/auretim/trunk</developerConnection>
      <url>https://auge-117-028.eye.medizin.uni-tuebingen.de:8080/redmine/repositories/browse/auretim/trunk</url>
    </scm>
    <dependencies>
        <dependency>
            <groupId>com.guigarage</groupId>
            <artifactId>flatter</artifactId>
            <version>0.7</version>
        </dependency>
        <dependency>
            <groupId>com.pi4j</groupId>
            <artifactId>pi4j-core</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>8.40.10</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>12.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>12.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.mobicents.external.freetts</groupId>
            <artifactId>freetts</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.mobicents.external.freetts</groupId>
            <artifactId>en_us</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.mobicents.external.freetts</groupId>
            <artifactId>cmu_us_kal</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.mobicents.external.freetts</groupId>
            <artifactId>cmu_time_awb</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.mobicents.external.freetts</groupId>
            <artifactId>cmulex</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.mobicents.external.freetts</groupId>
            <artifactId>cmutimelex</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.mobicents.external.freetts</groupId>
            <artifactId>cmudict04</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>edu.cmu.sphinx</groupId>
            <artifactId>sphinx4-core</artifactId>
            <version>5prealpha-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>edu.cmu.sphinx</groupId>
            <artifactId>sphinx4-data</artifactId>
            <version>5prealpha-SNAPSHOT</version>
        </dependency>

    </dependencies>
</project>
